fix img sizing on mobile

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -202,6 +202,10 @@ border-radius: 4px;
 .tags {
   border: 1px solid black;
 }
+img {
+  width: 280px;
+  height: auto;
+}
 
 /*--- GITHUB WIDGET ---*/
 .widget {
